# bugsnag-react-native

./: .gitignore  .gitmodules  .npmignore  .travis.yml  BugsnagReactNative.podspec  CHANGELOG.md  CONTRIBUTING.md  Gemfile  LICENSE.txt  Makefile  README.md  build.gradle  index.d.ts  index.js  issue_template.md  package-lock.json  package.json  react-native.config.js  tslint.json
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: A.md  Bug_report.md  Custom.md  Feature_request.md
.github/PULL_REQUEST_TEMPLATE/: Bug_fix.md  Feature.md  Improved_test_coverage.md
android/: build.gradle  lint-baseline.xml
cocoa/: BugsnagReactNative.h  BugsnagReactNative.m
cocoa/BugsnagReactNative.xcodeproj/: project.pbxproj
examples/: README.md  index.android.js  index.ios.js  package-lock.json  package.json
examples/android/: settings.gradle
examples/ndk-example/android/app/: BUCK  CMakeLists.txt  build.gradle
examples/ndk-example/android/app/src/main/: AndroidManifest.xml
examples/ndk-example/android/app/src/main/cpp/: native-lib.cpp
examples/ndk-example/android/app/src/main/java/com/garuth/: FancyModule.java  FancyPackage.java  MainActivity.java  MainApplication.java
examples/ndk-example/android/app/src/main/res/values/: strings.xml
features/: detect_anr.feature  runtime_versions.feature  session_stopping.feature  unhandled_error.feature
lib/: Bugsnag.js
scripts/: addIOSNativeDependencies.js
src/: Bugsnag.js  NativeSerializer.js
test/: app.ts  test-react-native-link-build.sh  test-react-native-pod-build.sh  types.sh
test-harness/: package.json
(+891 files in other folders)
